fixed the body/root layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 @import "tailwindcss";
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /* max-width: 1280px; */
+  /* max-width: none; */
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
   text-align: center;
+  height: 100%;
+  width: 100%;
 }
 
 .logo {
