--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex; */
+  /* place-items: center; */
+  height: 100%;
+  width: 100%;
   min-width: 320px;
   min-height: 100vh;
 }
